# app-shadowing-practice

./: .env.example  .gitignore  LICENSE  README.md  init_db.py  pyproject.toml
docs/: architecture.md  specification.md
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/exercises/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/lib/: api.ts  types.ts
frontend/lib/audio/: index.ts  types.ts  useAudioPlayback.web.ts
frontend/lib/hooks/: useAudioPlayback.ts  useCreateExercise.ts  useExercise.ts  useExercises.ts  useSettings.ts  useShadowingResults.ts
frontend/lib/navigation/: NavigationProvider.web.tsx  context.tsx  index.ts  types.ts
frontend/lib/recording/: index.ts  types.ts  useRecording.web.ts
frontend/lib/utils/: compare.ts  format.ts
src/: app.py
src/models/: database.py  models.py  schemas.py
src/routes/: audio.py  exercises.py  settings.py  shadowing.py
src/services/: openai_service.py  scoring_service.py  speech_service.py  transcription_service.py  turn_service.py
src/services/model_providers/: __init__.py  stt.py  tts.py  tts_voices.py
src/static/css/: style.css
src/static/js/: app.js
src/static/templates/: index.html
